Swap out the remaining mangled names
Issue:
https://gitcode.com/openharmony/arkcompiler_ets_frontend/issues/7919

Description:
- updated code places with the new name format
- new mangled names for getter, setter, property, partial and async
- updated many related tests

Testing:
All required per-merge tests have passed.

Related to internal issue #21301

Change-Id: I0f2995a0c5ebe78b1589fdc7a3e729975f25432b
Signed-off-by: Otto Eotvos <otto.eotvos@h-lab.eu>


revert merge request: Add the remaining new mangled names and update the related code

1cf7c861b99dba3ed5f6fea0d84593f1c2adac3e

This revert merge request !8635

--- a/ets2panda/compiler/templates/isa.h.erb
+++ b/ets2panda/compiler/templates/isa.h.erb
@@ -108,12 +108,12 @@ static bool IsAccessor(const std::string &calleeInternalName)
         return false;
     }
     auto methodBeginPos = pos + 1;
-    // case 1. getter: "xxx.%%get-PropName:PropType;"  name start with '%%get-'
+    // case 1. getter: "xxx.<get>PropName:PropType;"  name start with '<get>'
     auto checkGetterPos = calleeInternalName.find(Signatures::GETTER_METHOD_BEGIN, methodBeginPos);
     if (checkGetterPos == methodBeginPos) {
         return true;
     }
-    // case 2. setter: "xxx.%%set-PropName:PropType;void;"  name start with '%%set-'
+    // case 2. setter: "xxx.<set>PropName:PropType;void;"  name start with '<set>'
     auto checkSetterPos = calleeInternalName.find(Signatures::SETTER_METHOD_BEGIN, methodBeginPos);
     if (checkSetterPos == methodBeginPos) {
         return true;
